# attention-branch-network

./: .gitignore  NOTICE.txt  README.md  demo.ipynb  download.sh  imagenette_utils.py  main.py  pyproject.toml  train.py  visualize.py
.devin/: wiki.json
abn/: __init__.py  configuration_abn.py  image_processing_abn.py  resnet_abn_backbone.py
models/: __init__.py  abn.py  image_processing_abn.py  modeling_abn.py  resnet_abn.py  resnet_abn_backbone.py
test/runs/Oct20_10-55-49_server-113-107/: events.out.tfevents.1760925350.server-113-107
